Fix scrollbar height

--- a/src-web/components/Topology/scss/topology-details.scss
+++ b/src-web/components/Topology/scss/topology-details.scss
@@ -265,6 +265,17 @@
   }
 
   .details-view-container {
+    height: calc(100vh - 370px) !important;
+
+    .details-view-scrollbar {
+      width: 100%;
+      visibility: hidden;
+    }
+  }
+
+  .legend-view-container {
+    height: calc(100vh - 340px) !important;
+
     .details-view-scrollbar {
       width: 100%;
       visibility: hidden;
